--- a/switch/switch/switch.vcxproj
+++ b/switch/switch/switch.vcxproj
@@ -153,6 +153,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="summ.cpp" />
     <ClCompile Include="switch.cpp" />
   </ItemGroup>
   <ItemGroup>
