--- a/switch/switch/switch.vcxproj.filters
+++ b/switch/switch/switch.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="summ.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="delenie.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="summ.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="delenie.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
