--- a/switch/switch/switch.vcxproj
+++ b/switch/switch/switch.vcxproj
@@ -147,6 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="delenie.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -157,6 +158,7 @@
     <ClCompile Include="switch.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="delenie.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="summ.h" />
   </ItemGroup>
